RESOLVED FIXED308269
Ensure we never destroy NSURLSession objects without first calling invalidateAndCancel on them
https://bugs.webkit.org/show_bug.cgi?id=308269
Summary Ensure we never destroy NSURLSession objects without first calling invalidate...
Chris Dumez
Reported 2026-02-19 20:09:44 PST
Ensure we never destroy NSURLSession objects without first calling invalidateAndCancel on them, in order to avoid leaks.
Attachments
Chris Dumez
Comment 1 2026-02-19 20:10:04 PST
Chris Dumez
Comment 2 2026-02-19 20:12:09 PST
EWS
Comment 3 2026-02-20 01:53:07 PST
Committed 307898@main (b6d92a9e238a): <https://commits.webkit.org/307898@main> Reviewed commits have been landed. Closing PR #59052 and removing active labels.
EWS
Comment 4 2026-02-20 06:11:44 PST
Committed 305413.324@safari-7624-branch (5c411d30acce): <https://commits.webkit.org/305413.324@safari-7624-branch> Reviewed commits have been landed. Closing PR #4520 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.