Cherry-pick b6d92a9e238a. rdar://170790586

Ensure we never destroy NSURLSession objects without first calling invalidateAndCancel on them
    https://bugs.webkit.org/show_bug.cgi?id=308269
    rdar://170645923

    Reviewed by Ryosuke Niwa.

    Ensure we never destroy NSURLSession objects without first calling
    invalidateAndCancel on them, in order to avoid leaks.

    * Source/WebKit/NetworkProcess/cocoa/NetworkSessionCocoa.h:
    * Source/WebKit/NetworkProcess/cocoa/NetworkSessionCocoa.mm:
    (WebKit::SessionWrapper::~SessionWrapper):

    Canonical link: https://commits.webkit.org/307898@main

Identifier: 305413.324@safari-7624-branch